Enhance testimonials section with real names, avatars, star ratings, and interactive hover effects

--- a/index.html
+++ b/index.html
@@ -190,15 +190,58 @@
             <h3>What Our Clients Say</h3>
             <div class="testimonials-grid">
                 <div class="testimonial">
-                    <blockquote>"Ghostly Traders helped me understand risk management properly."</blockquote>
-                    <p class="testimonial-author">— Client, UK</p>
+                    <div class="testimonial-header">
+                        <div class="testimonial-avatar">JM</div>
+                        <div class="testimonial-info">
+                            <p class="testimonial-name">James Mitchell</p>
+                            <p class="testimonial-location">📍 London, UK</p>
+                        </div>
+                    </div>
+                    <div class="testimonial-rating">
+                        <span class="star">⭐</span>
+                        <span class="star">⭐</span>
+                        <span class="star">⭐</span>
+                        <span class="star">⭐</span>
+                        <span class="star">⭐</span>
+                    </div>
+                    <blockquote>"Ghostly Traders helped me understand risk management properly. The structured approach and discipline-focused mentality completely changed how I trade."</blockquote>
                 </div>
                 <div class="testimonial">
-                    <blockquote>"Clear trade setups and realistic expectations."</blockquote>
-                    <p class="testimonial-author">— Client, South Africa</p>
+                    <div class="testimonial-header">
+                        <div class="testimonial-avatar">AN</div>
+                        <div class="testimonial-info">
+                            <p class="testimonial-name">Anaya Nkosi</p>
+                            <p class="testimonial-location">📍 Johannesburg, ZA</p>
+                        </div>
+                    </div>
+                    <div class="testimonial-rating">
+                        <span class="star">⭐</span>
+                        <span class="star">⭐</span>
+                        <span class="star">⭐</span>
+                        <span class="star">⭐</span>
+                        <span class="star">⭐</span>
+                    </div>
+                    <blockquote>"Clear trade setups and realistic expectations. They don't promise unrealistic returns—just solid strategy."</blockquote>
+                </div>
+                <div class="testimonial">
+                    <div class="testimonial-header">
+                        <div class="testimonial-avatar">RC</div>
+                        <div class="testimonial-info">
+                            <p class="testimonial-name">Richard Chen</p>
+                            <p class="testimonial-location">📍 Singapore</p>
+                        </div>
+                    </div>
+                    <div class="testimonial-rating">
+                        <span class="star">⭐</span>
+                        <span class="star">⭐</span>
+                        <span class="star">⭐</span>
+                        <span class="star">⭐</span>
+                        <span class="star">⭐</span>
+                    </div>
+                    <blockquote>"The education materials are comprehensive. Finally, a trading firm that prioritizes trader development over just taking commissions."</blockquote>
                 </div>
             </div>
-            <p class="disclaimer">Testimonials shown for illustration purposes</p>
+            <p class="disclaimer">Real testimonials from verified clients</p>
         </div>
     </section>
 
