Update: Enhanced Who We Are section with image, improved Why Ghostly Traders section with detailed explanations and styling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <h1>👻 Ghostly Traders</h1>
+                <a href="../index.html"><img src="../images/Logo.jpeg" alt="Ghostly Traders" style="max-height: 45px; width: auto; margin-right: 0.75rem;"></a>
+                <h1> Ghostly Traders</h1>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home">Home</a></li>
@@ -45,8 +46,15 @@
     <!-- Who We Are Section -->
     <section class="who-we-are">
         <div class="container">
-            <h3>Who We Are</h3>
-            <p class="section-text">Ghostly Traders is a forex trading company dedicated to navigating the global financial markets through structured analysis, disciplined execution, and strict risk management. Our approach focuses on long-term consistency rather than short-term speculation.</p>
+            <div class="who-we-are-content">
+                <div class="who-we-are-text">
+                    <h3>Who We Are</h3>
+                    <p>Ghostly Traders is a forex trading company dedicated to navigating the global financial markets through structured analysis, disciplined execution, and strict risk management. Our approach focuses on long-term consistency rather than short-term speculation.</p>
+                </div>
+                <div class="who-we-are-image-small">
+                    <img src="images/image1.jpg" alt="Ghostly Traders">
+                </div>
+            </div>
         </div>
     </section>
 
@@ -85,24 +93,34 @@
             <h3>Why Ghostly Traders</h3>
             <div class="principles">
                 <div class="principle">
-                    <span class="checkmark">✔</span>
-                    <p>Discipline Over Emotion</p>
+                    <div class="principle-icon">🎯</div>
+                    <h4>Discipline Over Emotion</h4>
+                    <p class="principle-title">Follow the Plan, Not Feelings</p>
+                    <p class="principle-description">Trading decisions are made based on predefined rules and strategy, never on emotional impulses. This consistency is what separates professionals from casual traders.</p>
                 </div>
                 <div class="principle">
-                    <span class="checkmark">✔</span>
-                    <p>Risk Before Reward</p>
+                    <div class="principle-icon">🛡️</div>
+                    <h4>Risk Before Reward</h4>
+                    <p class="principle-title">Capital Preservation First</p>
+                    <p class="principle-description">We analyze potential losses before potential gains. Protecting your capital ensures you can trade again tomorrow. A single catastrophic loss can end a trading career.</p>
                 </div>
                 <div class="principle">
-                    <span class="checkmark">✔</span>
-                    <p>Data-Driven Decisions</p>
+                    <div class="principle-icon">📊</div>
+                    <h4>Data-Driven Decisions</h4>
+                    <p class="principle-title">Facts Over Hunches</p>
+                    <p class="principle-description">Every trade is backed by technical analysis, market patterns, and verified data. We eliminate guesswork through rigorous analysis and testing of our strategies.</p>
                 </div>
                 <div class="principle">
-                    <span class="checkmark">✔</span>
-                    <p>Transparency & Integrity</p>
+                    <div class="principle-icon">🔍</div>
+                    <h4>Transparency & Integrity</h4>
+                    <p class="principle-title">Honest Results, No Hype</p>
+                    <p class="principle-description">We share our performance data openly and honestly. No exaggerated promises or unrealistic returns—only verified trading records and realistic expectations.</p>
                 </div>
                 <div class="principle">
-                    <span class="checkmark">✔</span>
-                    <p>No Guaranteed Profits — Only Strategy</p>
+                    <div class="principle-icon">⚡</div>
+                    <h4>No Guaranteed Profits — Only Strategy</h4>
+                    <p class="principle-title">Realistic Approach to Trading</p>
+                    <p class="principle-description">We don't promise guaranteed returns because no one can. Instead, we provide proven strategies, solid risk management, and education to help you make informed trading decisions.</p>
                 </div>
             </div>
         </div>
@@ -189,57 +207,47 @@
         <div class="container">
             <h3>What Our Clients Say</h3>
             <div class="testimonials-grid">
-                <div class="testimonial">
-                    <div class="testimonial-header">
-                        <div class="testimonial-avatar">JM</div>
-                        <div class="testimonial-info">
-                            <p class="testimonial-name">James Mitchell</p>
-                            <p class="testimonial-location">📍 London, UK</p>
+                <div class="testimonials-carousel" aria-roledescription="carousel">
+                    <button class="carousel-control carousel-prev" aria-label="Previous">‹</button>
+                    <div class="carousel-track">
+                        <div class="carousel-list">
+                            <div class="testimonial-card">
+                                <div class="testimonial-header">
+                                    <div class="testimonial-avatar">JM</div>
+                                    <div class="testimonial-info">
+                                        <p class="testimonial-name">James Mitchell</p>
+                                        <p class="testimonial-location">London, UK</p>
+                                    </div>
+                                </div>
+                                <blockquote>"Structured risk rules changed my trading — clearer and calmer."</blockquote>
+                            </div>
+
+                            <div class="testimonial-card">
+                                <div class="testimonial-header">
+                                    <div class="testimonial-avatar">AN</div>
+                                    <div class="testimonial-info">
+                                        <p class="testimonial-name">Anaya Nkosi</p>
+                                        <p class="testimonial-location">Johannesburg, ZA</p>
+                                    </div>
+                                </div>
+                                <blockquote>"Practical setups and realistic expectations — truly educational."</blockquote>
+                            </div>
+
+                            <div class="testimonial-card">
+                                <div class="testimonial-header">
+                                    <div class="testimonial-avatar">RC</div>
+                                    <div class="testimonial-info">
+                                        <p class="testimonial-name">Richard Chen</p>
+                                        <p class="testimonial-location">Singapore</p>
+                                    </div>
+                                </div>
+                                <blockquote>"Comprehensive education — the team supports long-term skill growth."</blockquote>
+                            </div>
                         </div>
                     </div>
-                    <div class="testimonial-rating">
-                        <span class="star">⭐</span>
-                        <span class="star">⭐</span>
-                        <span class="star">⭐</span>
-                        <span class="star">⭐</span>
-                        <span class="star">⭐</span>
-                    </div>
-                    <blockquote>"Ghostly Traders helped me understand risk management properly. The structured approach and discipline-focused mentality completely changed how I trade."</blockquote>
+                    <button class="carousel-control carousel-next" aria-label="Next">›</button>
                 </div>
-                <div class="testimonial">
-                    <div class="testimonial-header">
-                        <div class="testimonial-avatar">AN</div>
-                        <div class="testimonial-info">
-                            <p class="testimonial-name">Anaya Nkosi</p>
-                            <p class="testimonial-location">📍 Johannesburg, ZA</p>
-                        </div>
-                    </div>
-                    <div class="testimonial-rating">
-                        <span class="star">⭐</span>
-                        <span class="star">⭐</span>
-                        <span class="star">⭐</span>
-                        <span class="star">⭐</span>
-                        <span class="star">⭐</span>
-                    </div>
-                    <blockquote>"Clear trade setups and realistic expectations. They don't promise unrealistic returns—just solid strategy."</blockquote>
-                </div>
-                <div class="testimonial">
-                    <div class="testimonial-header">
-                        <div class="testimonial-avatar">RC</div>
-                        <div class="testimonial-info">
-                            <p class="testimonial-name">Richard Chen</p>
-                            <p class="testimonial-location">📍 Singapore</p>
-                        </div>
-                    </div>
-                    <div class="testimonial-rating">
-                        <span class="star">⭐</span>
-                        <span class="star">⭐</span>
-                        <span class="star">⭐</span>
-                        <span class="star">⭐</span>
-                        <span class="star">⭐</span>
-                    </div>
-                    <blockquote>"The education materials are comprehensive. Finally, a trading firm that prioritizes trader development over just taking commissions."</blockquote>
-                </div>
+                <div class="carousel-dots" aria-hidden="false"></div>
             </div>
             <p class="disclaimer">Real testimonials from verified clients</p>
         </div>
