--- a/pages/disclaimer.html
+++ b/pages/disclaimer.html
@@ -12,7 +12,8 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <a href="../index.html"><h1>👻 Ghostly Traders</h1></a>
+                <a href="../index.html"><img src="../images/Logo.jpeg" alt="Ghostly Traders" style="max-height: 45px; width: auto; margin-right: 0.75rem;"></a>
+                <a href="../index.html"><h1> Ghostly Traders</h1></a>
             </div>
             <ul class="nav-menu">
                 <li><a href="../index.html">Home</a></li>
