Fix: Correct logo image path on homepage navigation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <a href="../index.html"><img src="../images/Logo.jpeg" alt="Ghostly Traders" style="max-height: 45px; width: auto; margin-right: 0.75rem;"></a>
+                <a href="index.html"><img src="images/Logo.jpeg" alt="Ghostly Traders" style="max-height: 45px; width: auto; margin-right: 0.75rem;"></a>
+
                 <h1> Ghostly Traders</h1>
             </div>
             <ul class="nav-menu">
